307. Writing a preprocessing function to turn time series data into windows & labels

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -1665,40 +1665,149 @@
         "  Turns a 1D array into a 2D array of sequential labelled windows of window_size with horizon size labels.\n",
         "  \"\"\"\n",
         "  # 1. Create a window of specific window_size(add the horizon on the end for labelling later)\n",
-        "  window_step = np.expand_dims(np.arange(window_size + horizon))\n",
+        "  window_step = np.expand_dims(np.arange(window_size + horizon), axis=0)\n",
+        "\n",
+        "  # 2. Create a 2D array of multiple window steps (minus 1 account for 0 indexing)\n",
+        "  window_indexes = window_step + np.expand_dims(np.arange(len(x) - (window_size + horizon -1)), axis=0).T # Create 2D array of windows of size window_size\n",
+        "  #print(f\"Window Indexes :\\n {window_indexes, window_indexes.shape}\")\n",
+        "\n",
+        "  #3 . Index on the target array (a time series ) with 2D array of multiple window steps\n",
+        "  windowed_array = x[window_indexes]\n",
+        "  #print(f\"Windowed_array : {windowed_array}\")\n",
+        "\n",
+        "  #4. Get the labelled windows\n",
+        "  windows, labels = get_labelled_windows(windowed_array, horizon=horizon)\n",
+        "  return windows, labels\n",
+        "\n",
         "\n"
       ],
-      "execution_count": 37,
+      "execution_count": 53,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "txR7mP8wTlts",
-        "outputId": "09290210-f397-40de-ecc7-3d20d9e37667",
+        "id": "-pRClMlgaF-7",
+        "outputId": "f23382f6-36d3-4efa-abb5-39600fda3a10",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "import numpy as np\n",
-        "np.expand_dims(np.arange(7 + 1), axis=0)"
+        "full_windows, full_labels = make_windows(prices, window_size=WINDOW_SIZE, horizon=HORIZON)\n",
+        "len(full_windows), len(full_labels)"
       ],
-      "execution_count": 40,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0, 1, 2, 3, 4, 5, 6, 7]])"
+              "(2780, 2780)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 54
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nsijFTZZmNTF",
+        "outputId": "9bdfbaf3-388c-476a-ba92-a452188a6a90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# View the first 3 windows/labels\n",
+        "for i in range(3) :\n",
+        "  print(f\"Window: {full_windows[i]} -> Label: {full_labels[i]}\")"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Window: [123.65499 125.455   108.58483 118.67466 121.33866 120.65533 121.795  ] -> Label [123.033]\n",
+            "Window: [125.455   108.58483 118.67466 121.33866 120.65533 121.795   123.033  ] -> Label [124.049]\n",
+            "Window: [108.58483 118.67466 121.33866 120.65533 121.795   123.033   124.049  ] -> Label [125.96116]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "To1bLSzNmza_",
+        "outputId": "37cf4d57-2418-42e9-eaac-facd7b4ceb90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# View the last 3 windows/labels\n",
+        "for i in range(3) :\n",
+        "  print(f\"Window : {full_windows[i-3]} -> Label : {full_labels[i-3]}\")"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Window : [58788.20967893 58102.19142623 55715.54665129 56573.5554719\n",
+            " 52147.82118698 49764.1320816  50032.69313676] -> Label : [47885.62525472]\n",
+            "Window : [58102.19142623 55715.54665129 56573.5554719  52147.82118698\n",
+            " 49764.1320816  50032.69313676 47885.62525472] -> Label : [45604.61575361]\n",
+            "Window : [55715.54665129 56573.5554719  52147.82118698 49764.1320816\n",
+            " 50032.69313676 47885.62525472 45604.61575361] -> Label : [43144.47129086]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iV0Hjw4anIc8",
+        "outputId": "59494f80-f9ac-4667-b6aa-7dd2ab730dd9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "prices[-1]"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "43144.471290860296"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VUpgWtCQnKbo"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
