--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -1687,11 +1687,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-pRClMlgaF-7",
-        "outputId": "f23382f6-36d3-4efa-abb5-39600fda3a10",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-pRClMlgaF-7",
+        "outputId": "f23382f6-36d3-4efa-abb5-39600fda3a10"
       },
       "source": [
         "full_windows, full_labels = make_windows(prices, window_size=WINDOW_SIZE, horizon=HORIZON)\n",
@@ -1716,11 +1716,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nsijFTZZmNTF",
-        "outputId": "9bdfbaf3-388c-476a-ba92-a452188a6a90",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nsijFTZZmNTF",
+        "outputId": "9bdfbaf3-388c-476a-ba92-a452188a6a90"
       },
       "source": [
         "# View the first 3 windows/labels\n",
@@ -1743,11 +1743,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "To1bLSzNmza_",
-        "outputId": "37cf4d57-2418-42e9-eaac-facd7b4ceb90",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "To1bLSzNmza_",
+        "outputId": "37cf4d57-2418-42e9-eaac-facd7b4ceb90"
       },
       "source": [
         "# View the last 3 windows/labels\n",
@@ -1773,11 +1773,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iV0Hjw4anIc8",
-        "outputId": "59494f80-f9ac-4667-b6aa-7dd2ab730dd9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iV0Hjw4anIc8",
+        "outputId": "59494f80-f9ac-4667-b6aa-7dd2ab730dd9"
       },
       "source": [
         "prices[-1]"
@@ -1799,9 +1799,19 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "VUpgWtCQnKbo"
+      },
+      "source": [
+        "> **Note** : There is a function which does similar to above in tf.keras.preprocessing, an extension could be to try and replicate what we've done using the pre-made function:\n",
+        "https://www.tensorflow.org/api_docs/python/tf/keras/utils/timeseries_dataset_from_array"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rmDEWEPrn00v"
       },
       "source": [
         ""
