309. Creating a modelling checkpoint callback to save our best performing model

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -1809,11 +1809,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_YDhiR_WuhHs",
-        "outputId": "ed069bfc-8898-49fd-cbe8-4bcaa1fd9ff3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_YDhiR_WuhHs",
+        "outputId": "ed069bfc-8898-49fd-cbe8-4bcaa1fd9ff3"
       },
       "source": [
         "len(train_windows), len(test_windows), len(train_labels), len(test_labels)"
@@ -1835,11 +1835,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S0RS8H4rungc",
-        "outputId": "e4dd6d12-e989-4d29-c0f2-ed8c4b7672ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "S0RS8H4rungc",
+        "outputId": "e4dd6d12-e989-4d29-c0f2-ed8c4b7672ce"
       },
       "source": [
         "len(full_windows) * 0.8"
@@ -1861,11 +1861,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rgJQlfFkur5p",
-        "outputId": "5a461026-0ae5-4b89-853a-d2314ec72eca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rgJQlfFkur5p",
+        "outputId": "5a461026-0ae5-4b89-853a-d2314ec72eca"
       },
       "source": [
         "train_windows[:5], train_labels[:5]"
@@ -1900,11 +1900,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DNVA2M5IuwTr",
-        "outputId": "f15401f0-689f-4cd9-e2ed-5a6eb3510e89",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DNVA2M5IuwTr",
+        "outputId": "f15401f0-689f-4cd9-e2ed-5a6eb3510e89"
       },
       "source": [
         "# Check to see if train labels are the same (before and after window split)\n",
@@ -1927,11 +1927,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "afaxVk2OvONV",
-        "outputId": "1b841ec5-31d7-4549-c0bc-4fa36c5d5263",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "afaxVk2OvONV",
+        "outputId": "1b841ec5-31d7-4549-c0bc-4fa36c5d5263"
       },
       "source": [
         "np.squeeze(train_labels[:5]).shape"
@@ -1951,9 +1951,47 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HLbpAnSOwXlQ"
+      },
+      "source": [
+        "## Making a modelling checkpoint\n",
+        "\n",
+        "Because our model's performance will fluctuate from experiment to experiment, we're going to write a model checkpoint so we can compare apple to apples.\n",
+        "\n",
+        "More specifically, we want to compare each of our model's best performances against the other model's best performances.\n",
+        "\n",
+        "For example if our model performs the best on epoch 55 (but we're training for 100 epochs), we want to load an evaluate the model saved on epoch 55.\n",
+        "\n",
+        "We can create a modelling checkpoint callback using the following :-\n",
+        "https://www.tensorflow.org/api_docs/python/tf/keras/callbacks/ModelCheckpoint\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "6vmYIHOAvsvi"
+        "id": "bNfGsNnUw4gy"
+      },
+      "source": [
+        "import os\n",
+        "\n",
+        "# Create a function to implement a ModelCheckpoint callback with a specific filename\n",
+        "\n",
+        "def create_model_checkpoint(model_name, save_path=\"model_experiments\") :\n",
+        "  return tf.keras.callbacks.ModelCheckpoint(filepath=os.path.join(save_path, model_name),\n",
+        "                                            verbose=0, # only output a limited  amout of text\n",
+        "                                            save_best_only=True)"
+      ],
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NM8jDPVGzYVD"
       },
       "source": [
         ""
