317. Preparing data for building a Conv1D model

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -3428,10 +3428,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "gkbpPA_vUndK",
-        "outputId": "4d4f0bee-2cdb-40d4-c75d-41e292a1075e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4d4f0bee-2cdb-40d4-c75d-41e292a1075e"
       },
       "source": [
         "model_2_results[\"mae\"].ndim"
@@ -3700,12 +3700,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZR7__juRZZ_M",
-        "outputId": "c745763f-c9b8-44c7-e4da-5896a6b3186f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 440
-        }
+        },
+        "id": "ZR7__juRZZ_M",
+        "outputId": "c745763f-c9b8-44c7-e4da-5896a6b3186f"
       },
       "source": [
         "pd.DataFrame({\"naive\" : naive_results[\"mae\"],\n",
@@ -3739,12 +3739,241 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "HtchN9ptbcfK"
       },
       "source": [
-        ""
+        "## Model 4 : Build a Conv1D"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9but3wiRcU2w"
+      },
+      "source": [
+        "HORIZON = 1 # predict next day of Bitcoin prices\n",
+        "WINDOW_SIZE = 7 # use previous week worth data\n"
+      ],
+      "execution_count": 95,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a1gtFMkoc5l2",
+        "outputId": "72464e00-d3c0-4d96-ba67-adac19a48c33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Create windowed data\n",
+        "full_windows, full_labels = make_windows(prices, window_size = WINDOW_SIZE, horizon = HORIZON)\n",
+        "len(full_windows), len(full_labels)"
+      ],
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2780, 2780)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DzN1nzXsdE2M",
+        "outputId": "e5216826-3eb1-426a-8126-7ffe4ebe1214",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train_windows, test_windows, train_labels, test_labels = make_train_test_splits(full_windows, full_labels)\n",
+        "len(train_windows), len(test_windows), len(train_labels), len(test_labels)"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2224, 556, 2224, 556)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UPCNuEuUdWDi",
+        "outputId": "d63f9779-c7e5-480d-fcd4-5c80928b36b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train_windows.shape, train_labels.shape"
+      ],
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((2224, 7), (2224, 1))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 98
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nyPa8g9udaK9"
+      },
+      "source": [
+        "We need an input shape of : `(batch_size, timesteps, input_dim)`...\n",
+        "\n",
+        "However, out data isn't in that shape yet..."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wl6g0GYWdsO6",
+        "outputId": "7ec3cb19-1809-4266-f778-961631f3c7a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check data input shape\n",
+        "train_windows[0].shape # returns (WINDOW_SIZE)"
+      ],
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(7,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 99
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b7P1viOFdzAP",
+        "outputId": "0beeee49-772a-46b1-c015-f5b77cb6f863",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Before we pass our data to the Conv1D layer, we have to reshape it in order to make it work\n",
+        "x = tf.constant(train_windows[0])\n",
+        "x"
+      ],
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(7,), dtype=float64, numpy=\n",
+              "array([123.65499, 125.455  , 108.58483, 118.67466, 121.33866, 120.65533,\n",
+              "       121.795  ])>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 100
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0_oA7PlPekAD"
+      },
+      "source": [
+        "> **Resources** : TensorFlow Lambda function https://www.tensorflow.org/api_docs/python/tf/keras/layers/Lambda"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1cUtemW4eJMA"
+      },
+      "source": [
+        "expand_dims_layer = layers.Lambda(lambda x : tf.expand_dims(x, axis = 1)) # add an extra dimension for input_dim"
+      ],
+      "execution_count": 101,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GKBnQSIqetta",
+        "outputId": "f7424842-2706-46cd-a7b5-129b2d969c37",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Test out our lambda layer\n",
+        "print(f\"Original shape : {x.shape}\") # (WINDOW_SIZE)\n",
+        "print(f\"Expanded shape : {expand_dims_layer(x).shape}\") # (WINDOW_SIZE, input_dim)\n",
+        "print(f\"Original values with expanded shape :\\n {expand_dims_layer(x)}\")"
+      ],
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Original shape : (7,)\n",
+            "Expanded shape : (7, 1)\n",
+            "Original values with expanded shape :\n",
+            " [[123.65499]\n",
+            " [125.455  ]\n",
+            " [108.58483]\n",
+            " [118.67466]\n",
+            " [121.33866]\n",
+            " [120.65533]\n",
+            " [121.795  ]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yLKGEFvEf1K-"
+      },
+      "source": [
+        "# Create Conv1D model\n",
+        "\n",
+        "#lambda layer\n",
+        "# Conv1D model, filter =128, kernel_size =  , padding...\n",
+        "# output layer dense"
       ],
       "execution_count": null,
       "outputs": []
