--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -4471,11 +4471,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qIF4pZIq0vix",
-        "outputId": "43193822-dd3f-414d-f0a6-bff9da55b48a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qIF4pZIq0vix",
+        "outputId": "43193822-dd3f-414d-f0a6-bff9da55b48a"
       },
       "source": [
         "from tensorflow.keras import layers\n",
@@ -4768,11 +4768,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TwTMkAiS4s0a",
-        "outputId": "b416a9b3-d1f0-4d0e-bd5d-8a840c9d3f2e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TwTMkAiS4s0a",
+        "outputId": "b416a9b3-d1f0-4d0e-bd5d-8a840c9d3f2e"
       },
       "source": [
         "model_5.evaluate(test_windows, test_labels)"
@@ -4801,11 +4801,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SJypGEul-ex4",
-        "outputId": "53844f77-954d-42bd-e245-6e9ec061f463",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SJypGEul-ex4",
+        "outputId": "53844f77-954d-42bd-e245-6e9ec061f463"
       },
       "source": [
         "# Get the best performing model 5 and evaluate on test data\n",
@@ -4837,11 +4837,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EWGU7sLX-2sG",
-        "outputId": "9739aa5b-de7f-4325-c385-f8ad70cfdc13",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EWGU7sLX-2sG",
+        "outputId": "9739aa5b-de7f-4325-c385-f8ad70cfdc13"
       },
       "source": [
         "# Make prediction with our LSTM model\n",
@@ -4865,11 +4865,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HsTFC8jt_Gvu",
-        "outputId": "ad51447f-4a82-4fc0-c5e6-1a90e54d87aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HsTFC8jt_Gvu",
+        "outputId": "ad51447f-4a82-4fc0-c5e6-1a90e54d87aa"
       },
       "source": [
         "# Evaluate model 5 predictions\n",
@@ -4898,11 +4898,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FZihAugrASiM",
-        "outputId": "67374392-6a24-40d2-a919-68c205140323",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FZihAugrASiM",
+        "outputId": "67374392-6a24-40d2-a919-68c205140323"
       },
       "source": [
         "model_1_results"
@@ -4926,9 +4926,27 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-M1X7wgFBzms"
+      },
+      "source": [
+        "**Note** : Because neural networks are such powerful algorithms, they can be used for almost any problem, however that doesn't mean they'll achieve performant or usable results. You're probably starting to clue onto this now."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "O6cyHMa1A2cN"
+      },
+      "source": [
+        "## Model 6 : Multi-variate data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AJUjLr9tBycX"
       },
       "source": [
         ""
