--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -4940,13 +4940,27 @@
         "id": "O6cyHMa1A2cN"
       },
       "source": [
-        "## Model 6 : Multi-variate data"
+        "## Make a multivariate time-series dataset\n",
+        "\n",
+        "Before we add a feature to our time series, what is a feature we can use?\n",
+        "\n",
+        "One feature we could add is whether or not Daniel Bourke  or Elon Musk ( :) )tweeted on that day ...\n",
+        "\n",
+        "* day 1 - 0\n",
+        "* day 2 - 1\n",
+        "* day 3 - 0\n",
+        "\n",
+        "What's better feature to use ?\n",
+        "\n",
+        "\n",
+        "How about the bitcoin halving events?\n",
+        "https://www.cmcmarkets.com/en/learn-cryptocurrencies/bitcoin-halving"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AJUjLr9tBycX"
+        "id": "xxiOd61RD1Uo"
       },
       "source": [
         ""
