324. Model 7: Discussing what we're going to be doing with the N-BEATS algorithm

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -6080,7 +6080,7 @@
         "            validation_data = (X_test, y_test),\n",
         "            callbacks=[create_model_checkpoint(model_name = model_6.name)])\n"
       ],
-      "execution_count": null,
+      "execution_count": 147,
       "outputs": [
         {
           "output_type": "stream",
@@ -6272,53 +6272,178 @@
             "Epoch 76/100\n",
             "18/18 [==============================] - 0s 6ms/step - loss: 107.8084 - val_loss: 582.2406\n",
             "Epoch 77/100\n",
-            "18/18 [==============================] - 0s 4ms/step - loss: 107.2528 - val_loss: 571.8563\n"
+            "18/18 [==============================] - 0s 4ms/step - loss: 107.2528 - val_loss: 571.8563\n",
+            "INFO:tensorflow:Assets written to: model_experiments/model_6_dense_multivariate/assets\n",
+            "Epoch 78/100\n",
+            "18/18 [==============================] - 0s 5ms/step - loss: 106.2309 - val_loss: 572.2827\n",
+            "Epoch 79/100\n",
+            "18/18 [==============================] - 0s 5ms/step - loss: 105.8568 - val_loss: 596.5464\n",
+            "Epoch 80/100\n",
+            "18/18 [==============================] - 0s 5ms/step - loss: 107.8419 - val_loss: 577.2399\n",
+            "Epoch 81/100\n",
+            "18/18 [==============================] - 0s 5ms/step - loss: 105.1101 - val_loss: 568.4897\n",
+            "INFO:tensorflow:Assets written to: model_experiments/model_6_dense_multivariate/assets\n",
+            "Epoch 82/100\n",
+            "18/18 [==============================] - 0s 4ms/step - loss: 114.1867 - val_loss: 592.5613\n",
+            "Epoch 83/100\n",
+            "18/18 [==============================] - 0s 4ms/step - loss: 107.9631 - val_loss: 651.6219\n",
+            "Epoch 84/100\n",
+            "18/18 [==============================] - 0s 4ms/step - loss: 109.6690 - val_loss: 568.9339\n",
+            "Epoch 85/100\n",
+            "18/18 [==============================] - 0s 4ms/step - loss: 105.8219 - val_loss: 571.5331\n",
+            "Epoch 86/100\n",
+            "18/18 [==============================] - 0s 4ms/step - loss: 104.8628 - val_loss: 579.3857\n",
+            "Epoch 87/100\n",
+            "18/18 [==============================] - 0s 5ms/step - loss: 104.7148 - val_loss: 582.9182\n",
+            "Epoch 88/100\n",
+            "18/18 [==============================] - 0s 5ms/step - loss: 106.8899 - val_loss: 569.0820\n",
+            "Epoch 89/100\n",
+            "18/18 [==============================] - 0s 5ms/step - loss: 105.4376 - val_loss: 569.3439\n",
+            "Epoch 90/100\n",
+            "18/18 [==============================] - 0s 4ms/step - loss: 105.1590 - val_loss: 599.0223\n",
+            "Epoch 91/100\n",
+            "18/18 [==============================] - 0s 5ms/step - loss: 112.2914 - val_loss: 618.5323\n",
+            "Epoch 92/100\n",
+            "18/18 [==============================] - 0s 4ms/step - loss: 107.1306 - val_loss: 591.9585\n",
+            "Epoch 93/100\n",
+            "18/18 [==============================] - 0s 4ms/step - loss: 115.7380 - val_loss: 639.2229\n",
+            "Epoch 94/100\n",
+            "18/18 [==============================] - 0s 5ms/step - loss: 108.3453 - val_loss: 578.5887\n",
+            "Epoch 95/100\n",
+            "18/18 [==============================] - 0s 4ms/step - loss: 104.2910 - val_loss: 568.2687\n",
+            "INFO:tensorflow:Assets written to: model_experiments/model_6_dense_multivariate/assets\n",
+            "Epoch 96/100\n",
+            "18/18 [==============================] - 0s 4ms/step - loss: 106.5346 - val_loss: 606.5489\n",
+            "Epoch 97/100\n",
+            "18/18 [==============================] - 0s 5ms/step - loss: 107.1290 - val_loss: 585.3787\n",
+            "Epoch 98/100\n",
+            "18/18 [==============================] - 0s 4ms/step - loss: 105.8151 - val_loss: 574.4833\n",
+            "Epoch 99/100\n",
+            "18/18 [==============================] - 0s 4ms/step - loss: 105.8276 - val_loss: 567.5863\n",
+            "INFO:tensorflow:Assets written to: model_experiments/model_6_dense_multivariate/assets\n",
+            "Epoch 100/100\n",
+            "18/18 [==============================] - 0s 4ms/step - loss: 114.9743 - val_loss: 654.9892\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f228397a4d0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 147
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Xy70rEaCZTyE"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xy70rEaCZTyE",
+        "outputId": "a628e111-2118-46d1-8971-7bcacd419b76"
       },
       "source": [
         "model_6.evaluate(X_test, y_test)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 148,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "18/18 [==============================] - 0s 2ms/step - loss: 654.9892\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "654.9891967773438"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 148
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gnXf9YbKZcre"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gnXf9YbKZcre",
+        "outputId": "4c4fcb44-108e-47cc-94d4-78e17000561d"
       },
       "source": [
         "# Load in best performing model\n",
         "model_6 = tf.keras.models.load_model(\"model_experiments/model_6_dense_multivariate/\")\n",
         "model_6.evaluate(X_test, y_test)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "18/18 [==============================] - 0s 2ms/step - loss: 567.5862\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "567.5862426757812"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 149
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HR0kq3NPZoNT"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HR0kq3NPZoNT",
+        "outputId": "c4427e0d-2b8a-4a55-d5b3-b527d1dbccfd"
       },
       "source": [
         "# Make predictions with multivariate model\n",
         "model_6_preds = tf.squeeze(model_6.predict(X_test))\n",
         "model_6_preds[:10]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10,), dtype=float32, numpy=\n",
+              "array([8836.276, 8763.8  , 9040.486, 8741.225, 8719.326, 8765.071,\n",
+              "       8661.102, 8496.891, 8463.231, 8521.585], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 150
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0qlJO8JOuYM-"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0qlJO8JOuYM-",
+        "outputId": "0dfdbf31-fe6c-468f-b723-2338feee4742"
       },
       "source": [
         "# Evaluate predictions to get eval metrics\n",
@@ -6326,17 +6451,32 @@
         "                                 y_pred = model_6_preds)\n",
         "model_6_results"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'mae': 567.5863,\n",
+              " 'mape': 2.5413754,\n",
+              " 'mase': 0.99709195,\n",
+              " 'mse': 1161687.2,\n",
+              " 'rmse': 1077.8159}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 151
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hG8C3-NwwH6P",
-        "outputId": "198d9ed8-a5a8-475a-cbaf-fa4c50e472cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hG8C3-NwwH6P",
+        "outputId": "198d9ed8-a5a8-475a-cbaf-fa4c50e472cd"
       },
       "source": [
         "model_1_results"
@@ -6362,11 +6502,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WaMOOKpJwLdC",
-        "outputId": "b21ecd52-9be9-4050-fcd5-7b87e89cde08",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WaMOOKpJwLdC",
+        "outputId": "b21ecd52-9be9-4050-fcd5-7b87e89cde08"
       },
       "source": [
         "naive_results"
@@ -6390,12 +6530,31 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "u5iEQCCKwVCQ"
       },
       "source": [
-        "## Model 7 :"
+        "## Model 7 : N-BEATS algorithm\n",
+        "\n",
+        "Let's now build the biggest baddest (though maybe not the baddest, as in, it perform really well...) time series forecasting model we've built so far.\n",
+        "\n",
+        "More specifically, we're going to be replicating the algorithm in Figure 1 from the following paper : https://arxiv.org/pdf/1905.10437.pdf\n",
+        "\n",
+        "Why ?\n",
+        "* This will allow us to practice replicating a paper with TensorFlow code\n",
+        "* We will see how to use TensorFlow layer subclassing (to make our own custom layers)\n",
+        "* Get experience using the Functional API to create a custom architecture.\n",
+        "* Potentially get state of the art results for our problem"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JURJhyDMxWA0"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
