--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -6549,12 +6549,43 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "JURJhyDMxWA0"
       },
       "source": [
-        ""
+        "### Building and testing the N-BEATS block layer\n",
+        "\n",
+        "\n",
+        "Because the N-BEATS block layer doesn't exist in TensorFlow, we've got to create it.\n",
+        "\n",
+        "To create custom layers and models in TensorFlow, we  can  use subclassing :\n",
+        "https://www.tensorflow.org/guide/keras/custom_layers_and_models"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ParsULj10lzA"
+      },
+      "source": [
+        "# Create N-Beats Block custom layer\n",
+        "class NBeatsBlock(tf.keras.layers.Layer) :\n",
+        "  def __init__(self,\n",
+        "               input_size : int,\n",
+        "               theta_size : int,\n",
+        "               horizon : int, \n",
+        "               n_neurons : int, \n",
+        "               n_layers : int,\n",
+        "               **kwargs): # the **kwargs take care of all the arguments for the parent class (input_shape, trainable, name ...)\n",
+        "    super().__init__(**kwargs)\n",
+        "    self.input_size = input_size\n",
+        "    self.theta_size = theta_size\n",
+        "    self.horizon = horizon\n",
+        "    self.n_neurons = n_neurons\n",
+        "    self.n_layers = n.n_layers\n",
+        "    \n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
